# ComDemo

./: README.md
ComDll/: ClsComAggDemo.rgs  ClsComDemo.idl  ClsComDemo.rgs  ComDll.aps  ComDll.rc  ComDll.vcxproj  ComDll.vcxproj.filters  Source.def  dllmain.cpp  resource.h
ComDll/cls/: ClsComAggDemo.h  ClsComDemo.h  ClsComDemoImpl.cpp  ClsComDemoImpl.h
ComDll/include/CCCMSet/: CCCMSet.h  CCCMSetView.h  ComDef.h  ICCMSet.h  readme.txt
ComDll/interface/: InfComDemo.h
ComHost/: ComHost.cpp  ComHost.vcxproj  ComHost.vcxproj.filters
ComHost/Surrogate/: CSurrogate.cpp  CSurrogate.h  ClsComInnerDef.h
ComLib/: ComLib.cpp  ComLib.h  ComLib.vcxproj  ComLib.vcxproj.filters
ComLib/cls/: ClsComDemo.cpp  ClsComDemo.h
ComLib/interface/: InfComDemo.h
ComLoader/: CTestLoader.cpp  CTestLoader.h  ComLoader.cpp  ComLoader.vcxproj  ComLoader.vcxproj.filters  EasyComLibLoader.h  EasyComLoader.h
XCom/: XCom.h  XComBase.h  XComCli.h  XComCore.h  XComError.h  XComLoader.h
XComDLL/: CXComDemo.h  IXComDemo.h  XComDLL.vcxproj  XComDLL.vcxproj.filters  XComDll.def  dllmain.cpp
XComDLL/xcom/: XCom.h  XComBase.h  XComCli.h  XComCore.h
XComLoader/: .gitignore  XComLoader.cpp  XComLoader.vcxproj  XComLoader.vcxproj.filters
XComLoader/xcom/: XComWinLoader.h
XComUnix/: CMakeLists.txt
XComUnix/src/XComClient/: CMakeLists.txt  main.cpp
XComUnix/src/XComServer/: CMakeLists.txt  CXComDemo.h  XComServer.cpp
XComUnix/src/include/: IXComDemo.h
